# RustyRoom

./: .gitignore  Cargo.toml  README.md  chat.db  voice_architecture.md
examples/: list_audio.rs
src/: audio.rs  client.rs  database.rs  lib.rs  main.rs  resc.rs  server.rs  tui_client.rs  voice.rs
src/client/cli/: main.rs
src/client/tui/: main.rs
src/core/: database.rs  error.rs  mod.rs
src/protocol/: message.rs  mod.rs
src/server/: mod.rs  tcp_server.rs
