[package]
name = "fca"
version = "0.1.0"
edition = "2024"
authors = ["Ernesto Cruz <a2023144672@isec.pt>"]
description = "A multi-threaded TCP chat server with room support"
license = "MIT"
repository = "https://github.com/ernestoCruz05/fca"
keywords = ["tcp", "chat", "server", "networking", "rust"]
categories = ["network-programming"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"