[package]
name = "rustyroom_alpha"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustyroom_alpha"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli_client"
path = "src/bin/cli_client.rs"

[[bin]]
name = "tui_client"
path = "src/bin/tui_client.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
crossterm = "0.27"
ratatui = "0.26"

